# maliG31_Neural_ODEs

./: .gitignore  LICENSE  README.md  spec_sheet.md
version1/: .gitignore  ARCHITECTURE_CORRECTION_SUMMARY.md  CMakeLists.txt  GPU_OPTIMAL_SOLVERS.md  MALI_G31_ARCHITECTURE_CORRECTION.md  README.md  STRUCTURE.md  build.sh  performance_analysis  performance_analysis.cpp  run_benchmark.sh  test_gpu_optimal.sh  validate_architecture_correction.sh
version1/include/: builtin_rhs_registry.h  cpu_solver.h  gpu_buffer_manager.h  gpu_context_manager.h  gpu_euler_backend.h  gpu_solver.h  shader_generator.h  solver_base.h  steppers.h  test_problems.h  timer.h
version1/scaling_tests/: simple_gpu_test.cpp
version1/shaders/templates/: euler_template.glsl
version1/src/: cpu_solver.cpp  gpu_solver.cpp  main.cpp
version1/src/backends/: cpu_backend.cpp  gpu_euler_backend.cpp
version1/src/core/: gpu_solver.cpp  main.cpp  test_problems.cpp
version1/src/experimental/: gpu_solver_euler_massively_parallel.cpp  gpu_solver_fixed.cpp  gpu_solver_leapfrog.cpp  gpu_solver_massively_parallel.cpp  gpu_solver_memory_safe.cpp  gpu_solver_optimized.cpp
version1/src/gpu_utils/: builtin_rhs_registry.cpp  gpu_buffer_manager.cpp  gpu_context_manager.cpp  shader_generator.cpp
version1/src/steppers/: explicit_euler.cpp  rk45.cpp  stepper_factory.cpp
version1/tests/: comprehensive_test.cpp  gpu_solver_comparison.cpp  show_generated_shader.cpp  simple_comparison.cpp  test_architecture_correction.cpp  test_gpu_simple.cpp  test_gpu_vs_cpu.cpp  test_new_architecture.cpp  test_optimized.cpp  test_vanderpol.cpp
